// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AboutView.vue > matches the snapshot 1`] = `
"<div class="about" msg="about" message="This is an about page.">
  <h1>This is an about page.</h1>
</div>"
`;

exports[`about.vue > matches the snapshot 1`] = `
"<div class="about">
  <h1>This is an about page.</h1>
</div>"
`;
